# neoRAD-IO2-C-Library

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
android/: AndroidManifest.xml  build.gradle  settings.gradle
android/gradle/wrapper/: gradle-wrapper.properties
android/jni/: Android.mk  Application.mk
android/src/com/intrepidcs/neoRADIO2/: CanSettings.java  ChannelName.java  ChipInfo.java  DeviceInfo.java  DeviceSettings.java  Fifo.java  Frame.java  FrameHeader.java  NativeLinked.java  Settings.java  USBDevice.java  ft260Device.java  libneoRADIO2.java
embedded/: neoRAD-IO2-C-Library.hzp  neoRAD-IO2-C-Library.hzs
inc/: fifo.h  ft260.h  neoRAD-IO2-AIN.h  neoRAD-IO2-AOUT.h  neoRAD-IO2-TC.h  neoRAD-IO2.h  neoRAD-IO2_PacketHandler.h  neoRADIO2_frames.h
libs/hidraw/: hid.c  hidraw.h
msvc/neoRAD-IO2-C-Library/: main.cpp  neoRAD-IO2-C-Library.sln  neoRAD-IO2-C-Library.vcxproj  neoRAD-IO2-C-Library.vcxproj.filters
python/: setup.py
python/src/: main.cpp
src/: CMakeLists.txt  ft260.c  neoRAD-IO2-TC.c  neoRAD-IO2.c  neoRAD-IO2_PacketHandler.c  neoRADIO2_jni.cpp
